Add sentiment analysis model and training notebook
Introduces a production-ready SentimentAnalyzer class in backend/model.py, supporting text preprocessing and prediction using a trained logistic regression model and TF-IDF vectorizer. Adds trained model and vectorizer files, model metadata, and a confusion matrix image. Updates the model training notebook with TF-IDF, logistic regression, Naive Bayes training, evaluation, and visualization steps.

--- a/notebooks/02_model_training.ipynb
+++ b/notebooks/02_model_training.ipynb
@@ -113,6 +113,144 @@
     "print(f\"Training set: {len(X_train)} samples\")\n",
     "print(f\"Test set: {len(X_test)} samples\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5facd051-812a-49bf-8d86-ff515be5d27a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cell 6: TF-IDF Vectorization\n",
+    "print(\"\\n\" + \"=\"*50)\n",
+    "print(\"BASELINE MODEL: Logistic Regression with TF-IDF\")\n",
+    "print(\"=\"*50)\n",
+    "\n",
+    "# Create TF-IDF features\n",
+    "print(\"\\nCreating TF-IDF features...\")\n",
+    "tfidf = TfidfVectorizer(max_features=5000, ngram_range=(1, 2), min_df=2)\n",
+    "X_train_tfidf = tfidf.fit_transform(X_train)\n",
+    "X_test_tfidf = tfidf.transform(X_test)\n",
+    "\n",
+    "print(f\"✅ TF-IDF matrix shape: {X_train_tfidf.shape}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ce922bd-a7ea-4208-900a-6b6032db1057",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cell 7: Train Logistic Regression\n",
+    "print(\"\\nTraining Logistic Regression model...\")\n",
+    "start_time = time.time()\n",
+    "\n",
+    "lr_model = LogisticRegression(max_iter=1000, random_state=42)\n",
+    "lr_model.fit(X_train_tfidf, y_train)\n",
+    "\n",
+    "training_time = time.time() - start_time\n",
+    "print(f\"✅ Training completed in {training_time:.2f} seconds\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c499768c-1374-411e-b270-d1b7b14046b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cell 8: Evaluate Logistic Regression\n",
+    "print(\"\\n--- Logistic Regression Evaluation ---\")\n",
+    "\n",
+    "# Make predictions\n",
+    "start_time = time.time()\n",
+    "y_pred_lr = lr_model.predict(X_test_tfidf)\n",
+    "prediction_time = (time.time() - start_time) / len(X_test)\n",
+    "\n",
+    "# Calculate metrics\n",
+    "accuracy_lr = accuracy_score(y_test, y_pred_lr)\n",
+    "precision_lr = precision_score(y_test, y_pred_lr)\n",
+    "recall_lr = recall_score(y_test, y_pred_lr)\n",
+    "f1_lr = f1_score(y_test, y_pred_lr)\n",
+    "\n",
+    "print(f\"\\nAccuracy:  {accuracy_lr:.4f} ({accuracy_lr*100:.2f}%)\")\n",
+    "print(f\"Precision: {precision_lr:.4f}\")\n",
+    "print(f\"Recall:    {recall_lr:.4f}\")\n",
+    "print(f\"F1 Score:  {f1_lr:.4f}\")\n",
+    "print(f\"Avg prediction time: {prediction_time*1000:.2f}ms\")\n",
+    "\n",
+    "print(\"\\n\" + classification_report(y_test, y_pred_lr, target_names=['Negative', 'Positive']))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "969d12a2-a9f4-4438-a22d-9800a214c56c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cell 9: Confusion Matrix\n",
+    "cm_lr = confusion_matrix(y_test, y_pred_lr)\n",
+    "plt.figure(figsize=(6, 5))\n",
+    "sns.heatmap(cm_lr, annot=True, fmt='d', cmap='Blues', \n",
+    "            xticklabels=['Negative', 'Positive'],\n",
+    "            yticklabels=['Negative', 'Positive'])\n",
+    "plt.title('Logistic Regression - Confusion Matrix')\n",
+    "plt.ylabel('Actual')\n",
+    "plt.xlabel('Predicted')\n",
+    "plt.tight_layout()\n",
+    "plt.savefig('../data/lr_confusion_matrix.png', dpi=300, bbox_inches='tight')\n",
+    "plt.show()\n",
+    "print(\"✅ Confusion matrix saved\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7feffb8-01f5-4f93-8384-231f33b09257",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cell 10: Train Naive Bayes\n",
+    "print(\"\\n\" + \"=\"*50)\n",
+    "print(\"COMPARISON MODEL: Naive Bayes\")\n",
+    "print(\"=\"*50)\n",
+    "\n",
+    "print(\"\\nTraining Naive Bayes model...\")\n",
+    "start_time = time.time()\n",
+    "\n",
+    "nb_model = MultinomialNB()\n",
+    "nb_model.fit(X_train_tfidf, y_train)\n",
+    "\n",
+    "training_time = time.time() - start_time\n",
+    "print(f\"✅ Training completed in {training_time:.2f} seconds\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6245488-5121-4b2a-8531-83aad007b87d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cell 11: Evaluate Naive Bayes\n",
+    "print(\"\\n--- Naive Bayes Evaluation ---\")\n",
+    "\n",
+    "y_pred_nb = nb_model.predict(X_test_tfidf)\n",
+    "\n",
+    "accuracy_nb = accuracy_score(y_test, y_pred_nb)\n",
+    "precision_nb = precision_score(y_test, y_pred_nb)\n",
+    "recall_nb = recall_score(y_test, y_pred_nb)\n",
+    "f1_nb = f1_score(y_test, y_pred_nb)\n",
+    "\n",
+    "print(f\"\\nAccuracy:  {accuracy_nb:.4f} ({accuracy_nb*100:.2f}%)\")\n",
+    "print(f\"Precision: {precision_nb:.4f}\")\n",
+    "print(f\"Recall:    {recall_nb:.4f}\")\n",
+    "print(f\"F1 Score:  {f1_nb:.4f}\")\n",
+    "\n",
+    "print(\"\\n\" + classification_report(y_test, y_pred_nb, target_names=['Negative', 'Positive']))"
+   ]
   }
  ],
  "metadata": {
